[FF-1429] - Update .gitignore to match the template repo

--- a/.gitignore
+++ b/.gitignore
@@ -357,16 +357,5 @@ src/Data
 # Jetbrains
 /.idea/
 
+# Lock files
 *.lock
-
-## ignore all logs
-#.vscode/
-#public/
-#resources/
-#*.log
-#node_modules/
-#package-lock.json
-#package.json
-#.env
-#*.sh
-#.DS_Store
