--- a/config.toml
+++ b/config.toml
@@ -49,7 +49,7 @@ contact_form_action = "#" # contact form works with : https://formspree.io
 copyright = ""
 rssLimit = 20
 # search *** true or false (if Search is disable Menu will align in Right) ***
-search = true
+search = false
 
 header_search_layout = "expanded" # "expanded" or "popupable"
 # Menu align *** "left", "right" or "center" (if Search is disable Menu will align in Right) ***
