--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,6 +2,24 @@ version: 2
 updates:
 
 
+- package-ecosystem: gitsubmodule
+  directory: "/"
+  schedule:
+    interval: weekly
+  open-pull-requests-limit: 99
+  reviewers:
+  - credfeto
+  assignees:
+  - credfeto
+  commit-message:
+    prefix: "[FF-1429]"
+  rebase-strategy: "auto"
+  labels:
+  - "submodule"
+  - "dependencies"
+  - "Changelog Not Required"
+
+
 - package-ecosystem: github-actions
   directory: "/"
   schedule:
