--- a/content/posts/docker/remove-old-images.yml
+++ b/content/posts/docker/remove-old-images.yml
@@ -10,7 +10,7 @@ tags:
 ---
 # Docker 
 
-## Reomove unused images, containers and configuration
+## Remove unused images, containers and configuration
 
 - all stopped containers
 - all networks not used by at least one container
