--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,7 +12,7 @@ updates:
   assignees:
   - credfeto
   commit-message:
-    prefix: "[FF-1429]"
+    prefix: "[Dependencies]"
   rebase-strategy: "auto"
   labels:
   - "submodule"
@@ -34,7 +34,7 @@ updates:
   allow:
   - dependency-type: all
   commit-message:
-    prefix: "[FF-1429]"
+    prefix: "[Dependencies]"
   rebase-strategy: "auto"
   labels:
   - "github-actions"
