--- a/config.toml
+++ b/config.toml
@@ -1,75 +1,90 @@
-############################ Default configuration #########################
 baseURL = "https://notes.markridgwell.com/"
 title = "Mark Ridgwell | Notes"
-# theme
-theme = "anubis"
-# post excerpt
-summaryLength = "10"
+enableRobotsTXT = true
+# this example loads the theme as hugo module
+# comment out line below, and uncomment the line after it if you prefer to load the theme normally
+theme = ["compose"] # edit this if you'ld rather use a fork of this repo
+# theme = "compose"
+enableGitInfo = true
 
-
-# disable language
-disableLanguages = [""] # desable language from here
-
-[params]
-author = "Mark Ridgwell"
-#dateFormat=""
-paginationSinglePost = true
-style = "dark-without-switcher"
-readMore = false
-readNextPosts = 2
-copyCodeButton = true
-rssAsSocialIcon = true
-
-# Graphcomment support
-graphcommentId = ""
-
-# utteranc.es support
-utterancesRepo = "credfeto/notes"  # mandatory
-utterancesTheme = "github-dark" # optional
-utterancesIssue = "pathname" # optional
-utterancesLabel = "website" # optional
-
-[[params.social]]
-id = "linkedin"
-name = "mridgwel/"
-
-[[params.social]]
-id = "github"
-name = "credfeto"
-
-#[[params.social]]
-#id = "rss"
-#url = "https://notes.markridgwell.com/rss"
-
-[menu]
-
-#[[menu.main]]
-#identifier = "about"
-#name = "About"
-#url = "/about/"
-#weight = 1
-
-[[menu.main]]
-identifier = "tags"
-name = "Tags"
-url = "/tags/"
-weight = 2
-
-[[menu.main]]
-name = "Posts"
-identifier = "archive"
-url = "/posts/"
-weight = 3
-
-[taxonomies]
-category = "categories"
-tag = "tags"
-
-[markup.goldmark.renderer]
-unsafe = true
+disableKinds = ["taxonomy"]
 
 [outputs]
-home = ["HTML", "AMP", "RSS", "JSON"]
+home = ["HTML", "RSS","JSON"]
 
-[pagination]
-pagerSize = 10
+
+############################# Default configuration #########################
+#baseURL = "https://notes.markridgwell.com/"
+#title = "Mark Ridgwell | Notes"
+## theme
+#theme = "compose"
+## post excerpt
+#summaryLength = "10"
+#
+#
+## disable language
+#disableLanguages = [""] # desable language from here
+#
+#[params]
+#author = "Mark Ridgwell"
+##dateFormat=""
+#paginationSinglePost = true
+#style = "dark-without-switcher"
+#readMore = false
+#readNextPosts = 2
+#copyCodeButton = true
+#rssAsSocialIcon = true
+#
+## Graphcomment support
+#graphcommentId = ""
+#
+## utteranc.es support
+#utterancesRepo = "credfeto/notes"  # mandatory
+#utterancesTheme = "github-dark" # optional
+#utterancesIssue = "pathname" # optional
+#utterancesLabel = "website" # optional
+#
+#[[params.social]]
+#id = "linkedin"
+#name = "mridgwel/"
+#
+#[[params.social]]
+#id = "github"
+#name = "credfeto"
+#
+##[[params.social]]
+##id = "rss"
+##url = "https://notes.markridgwell.com/rss"
+#
+#[menu]
+#
+##[[menu.main]]
+##identifier = "about"
+##name = "About"
+##url = "/about/"
+##weight = 1
+#
+#[[menu.main]]
+#identifier = "tags"
+#name = "Tags"
+#url = "/tags/"
+#weight = 2
+#
+#[[menu.main]]
+#name = "Posts"
+#identifier = "archive"
+#url = "/posts/"
+#weight = 3
+#
+#[taxonomies]
+#category = "categories"
+#tag = "tags"
+#
+#[markup.goldmark.renderer]
+#unsafe = true
+#
+#[outputs]
+#home = ["HTML", "AMP", "RSS", "JSON"]
+#
+#[pagination]
+#pagerSize = 10
