[Dependabot] Updated configuration

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -18,3 +18,22 @@ updates:
   - "Changelog Not Required"
   allow:
   - dependency-type: all
+
+- package-ecosystem: npm
+  directory: "/themes/compose/exampleSite"
+  schedule:
+    interval: daily
+    time: "03:00"
+    timezone: "Europe/London"
+  open-pull-requests-limit: 99
+  assignees:
+  - credfeto
+  commit-message:
+    prefix: "[Dependencies]"
+  labels:
+  - "npm"
+  - "dependencies"
+  - "Changelog Not Required"
+  versioning-strategy: increase-if-necessary
+  allow:
+  - dependency-type: all
